src/main/java/com/test/buymebackend/global/error/response/ValidationError.java
package com.test.buymebackend.global.error.response;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class ValidationError {
    private String field;
    private String message;
}
